[metadata]
name = tabletools-mnsmar
version = 0.1.9
author = Manolis Maragkakis
author_email = emmanouil.maragkakis@nih.gov
description = Package for manipulating table files (csv files with headers)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/maragkakislab/tabletools
project_urls =
    Bug Tracker = https://github.com/maragkakislab/tabletools/issues
classifiers =
    Programming Language :: Python :: 3
    License :: Public Domain
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pandas
    cutadapt

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    table-cat = tabletools.table_cat:main
    table-cut-columns = tabletools.table_cut_columns:main
