[metadata]
name = tabletools-mnsmar
version = 0.1.11
author = Manolis Maragkakis
author_email = emmanouil.maragkakis@nih.gov
description = Package for processing csv files with headers, a.k.a. tables
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/maragkakislab/tabletools
project_urls =
    Bug Tracker = https://github.com/maragkakislab/tabletools/issues
classifiers =
    Programming Language :: Python :: 3
    License :: Public Domain
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.4
install_requires =
    pandas

[options.entry_points]
console_scripts =
    table-cat = tabletools.table_cat:main
    tt-cat = tabletools.table_cat:main
    table-cut-columns = tabletools.table_cut_columns:main
